--- a/django/challenge/palindrome/static/css/palinstyle.css
+++ b/django/challenge/palindrome/static/css/palinstyle.css
@@ -3,7 +3,7 @@ body {
     font-weight: lighter;
 }
 
-tr td { width: 95%; }
+tr td { width: 90%; }
 
 th:nth-child(odd), td:nth-child(odd) {
     text-align: left;
@@ -14,6 +14,8 @@ th:nth-child(even), td:nth-child(even) {
 }
 
 h1 {
+    color: gray;
+    font-size: 95%;
     margin-top: 0.5rem;
 }
 
@@ -42,4 +44,5 @@ h1 {
     margin: 0 auto;
     padding: 1rem;
     width: 80%;
+    z-index: 10;
 }
